[package]
name = "mock_push"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
serde="1.0"
serde_derive="1.0"
serde_json = "1.0"
futures="0.3"
chrono = { version = "0.4", features = ["serde"] }